fix type of cell

--- a/notebooks/index.ipynb
+++ b/notebooks/index.ipynb
@@ -1,10 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# This is a demo notebook\n",
     "\n",
@@ -13,22 +11,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your first code cell here\n"
+     ]
     }
    ],
    "source": [
-    "# Your first code cell here\n",
-    "1 + 1"
+    "println(\"Your first code cell here\")"
    ]
   },
   {
